--- a/index.html
+++ b/index.html
@@ -8,16 +8,42 @@
   </head>
 
   <body>
-    <header class="bg-slate-700">
-      <div class="h-11 flex justify-between text-white items-center py-2 px-5">
-        <i class="fa-solid fa-chevron-left"></i>
+    <header class="bg-slate-700 uppercase">
+      <div
+        class="h-11 flex justify-between text-white items-center py-2 px-5 lg:mx-32"
+      >
+        <i class="fa-solid fa-chevron-left lg:hidden"></i>
         <img src="src/assets/verified.svg" alt="verified icon" />
         <span class="text-xs">30-DAY SATISFACTION GUARANTEE</span>
-        <i class="fa-solid fa-chevron-right"></i>
+
+        <img
+          src="src/assets/truck-light.svg"
+          alt="verified icon"
+          class="hidden lg:flex"
+        />
+        <span class="text-xs hidden lg:flex"
+          >Free delivery on orders over $40.00</span
+        >
+
+        <img
+          src="src/assets/heart-outline.svg"
+          alt="verified icon"
+          class="hidden lg:flex"
+        />
+        <span class="text-xs hidden lg:flex">50.000+ HAPPY CUSTOMERS</span>
+
+        <img
+          src="src/assets/money_back.svg"
+          alt="verified icon"
+          class="hidden lg:flex"
+        />
+        <span class="text-xs hidden lg:flex">100% Money Back Guarantee</span>
+        <i class="fa-solid fa-chevron-right lg:hidden"></i>
       </div>
     </header>
   </body>
-  <section class="flex justify-between h-28 items-center p-5">
+
+  <section class="flex justify-between h-28 items-center p-5 lg:px-32">
     <img
       class="h-5"
       src="https://s3-alpha-sig.figma.com/img/5bdd/2e8e/ca6d33ae7930758c0396996013437236?Expires=1701648000&Signature=G08qgqatek2q0-vSxbgsZskZUcZWVM2Vqc2S9yKknjpKTsY~qhQvmwPbby~Cm7MO-DbU-KY~-47xNzxbDezY-GFF3N5h07CV8d7C4DKne5NEI3G8HBhc-k6U4VYGX-Opi-Jb9j8fUU~En60~GpVkLNh0oenX2lxwCNO~R-NUq9ZYC8AblDdxM29fKyp4z-9hNlB0wjOiZ0L3h5qjUW03yqkVM98ImOrus0YSfPs0CNrSoGmCNiKgBvUgukFEGw~EOBdJuV8bwcykNqpsfI0AJ4iMgbFKM52vgG~pUc9mHT1f2yhPGVQbKQYRofB-W0acq4~~r7xQ5Dbd-pALKueOMQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
@@ -35,7 +61,7 @@
     Lorem ipsum dolor sit amet consectetur
   </div>
   <section
-    class="flex justify-between h-9 items-center px-5 my-6 capitalize text-xs text-center"
+    class="flex justify-between h-9 items-center px-5 my-6 capitalize text-xs text-center lg:px-32"
   >
     <div>
       <i
