--- a/index.html
+++ b/index.html
@@ -41,193 +41,195 @@
         <i class="fa-solid fa-chevron-right lg:hidden"></i>
       </div>
     </header>
-  </body>
-
-  <section class="flex justify-between h-28 items-center p-5 lg:px-32">
-    <img
-      class="h-5"
-      src="https://s3-alpha-sig.figma.com/img/5bdd/2e8e/ca6d33ae7930758c0396996013437236?Expires=1701648000&Signature=G08qgqatek2q0-vSxbgsZskZUcZWVM2Vqc2S9yKknjpKTsY~qhQvmwPbby~Cm7MO-DbU-KY~-47xNzxbDezY-GFF3N5h07CV8d7C4DKne5NEI3G8HBhc-k6U4VYGX-Opi-Jb9j8fUU~En60~GpVkLNh0oenX2lxwCNO~R-NUq9ZYC8AblDdxM29fKyp4z-9hNlB0wjOiZ0L3h5qjUW03yqkVM98ImOrus0YSfPs0CNrSoGmCNiKgBvUgukFEGw~EOBdJuV8bwcykNqpsfI0AJ4iMgbFKM52vgG~pUc9mHT1f2yhPGVQbKQYRofB-W0acq4~~r7xQ5Dbd-pALKueOMQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-      alt="clarifion image"
-    />
-    <div class="flex justify-between">
-      <img src="src/assets/mcafee.svg" alt="mcafee" class="mr-4" />
-      <img src="src/assets/norton.svg" alt="norton" />
-    </div>
-  </section>
-  <section class="text-center h-16 px-5">
-    <div class="text-3xl capitalize">Wait ! your order in progress.</div>
-  </section>
-  <div class="text-gray-700 pt-6 text-center">
-    Lorem ipsum dolor sit amet consectetur
-  </div>
-  <section
-    class="flex justify-between h-9 items-center px-5 my-6 capitalize text-xs text-center lg:px-32"
-  >
-    <div>
-      <i
-        class="fa-solid fa-check bg-lime-600 text-white rounded-full"
-        style="padding: 5px"
-      ></i>
-      <div>Cart Review</div>
-    </div>
-    <div>
-      <i
-        class="fa-solid fa-check bg-lime-600 text-white rounded-full"
-        style="padding: 5px"
-      ></i>
-      <div>checkout</div>
-    </div>
-    <div>
-      <div class="flex justify-center">
-        <div
-          class="bg-sky-500 rounded-full"
-          style="height: 21px; width: 20px; padding: 5px"
-        ></div>
-        <span class="absolute text-white">3</span>
-      </div>
-      <div class="font-bold">Special offer</div>
-    </div>
-    <div>
-      <div class="flex justify-center">
-        <img src="src/assets/ellipse-outln.svg" alt="step 4 icon" />
-        <span class="absolute text-sky-600">4</span>
-      </div>
-      <div>Confirmation</div>
-    </div>
-  </section>
-  <section class="text-center text-2xl capitalize px-5">
-    <span class="text-sky-500"> ONE TIME ONLY </span>
-    special price for 6 extra Clarifion for only
-    <div><span class="text-sky-500">$14 each </span>($84.00 total!)</div>
-  </section>
-  <section>
-    <div class="pt-6">
-      <img class="px-5 w-full" src="src/assets/clarifion.png" alt="" />
-    </div>
-  </section>
-  <section class="py-6">
-    <div class="grid grid-cols-4 px-5">
-      <div class="bg-sky-600 h-20 w-20 rounded-lg">
-        <img src="src/assets/clarifion-source-sm.png" alt="" />
-      </div>
-      <div class="col-span-3">
-        <div class="flex justify-around py-2">
-          <div class="text-sm">
-            Clarifion Air Ionizer
-            <div class="flex py-2">
-              <div><img src="src/assets/star.svg" alt="star rating" /></div>
-              <div><img src="src/assets/star.svg" alt="star rating" /></div>
-              <div><img src="src/assets/star.svg" alt="star rating" /></div>
-              <div><img src="src/assets/star.svg" alt="star rating" /></div>
-              <div><img src="src/assets/star.svg" alt="star rating" /></div>
-            </div>
-            <div class="flex">
-              <img src="src/assets/dot.svg" alt="dot" class="mr-4" /> 12 left in
-              Stock
-            </div>
-          </div>
-          <div>
-            <span class="text-xs mr-2 line-through text-gray-500">$180</span>
-            <span class="text-sm text-sky-500">$84</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="text-center text-xs px-5 my-6">
-    Simply plug a Clarifion into any standard outlet and replace bulky,
-    expensive air purifiers with a simple.
-  </section>
-  <section class="text-sm mx-5">
-    <div>
-      <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
-      <span>Negative Ion Technology may help with allergens</span>
-    </div>
-    <div>
-      <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
-      <span>Designed for air rejuvenation</span>
-    </div>
-    <div>
-      <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
-      <span>Perfect for every room in all types of places.</span>
-    </div>
-  </section>
-  <section>
-    <div class="h-16 bg-sky-100 rounded-lg mx-5 my-6">
-      <div class="grid grid-cols-5 items-center">
-        <div class="flex justify-center">
-          <img src="src/assets/percent.svg" alt="percent" />
-        </div>
-        <div class="col-span-4 my-2">
-          <span>
-            Save <span class="text-sky-500"> 53%</span> and get
-            <span class="text-sky-500">6 extra Clarifision</span> for only
-            <span class="text-sky-500"> $14 Each. </span>
-          </span>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section>
-    <div class="mx-5">
-      <button class="bg-green-600 w-full h-14 rounded-3xl text-white font-bold">
-        Yes - Claim my discount <i class="fa-solid fa-arrow-right"></i>
-      </button>
-    </div>
-  </section>
-  <section>
-    <div class="h-20 mx-5 rounded-lg mt-3" style="border: 1px solid #4d5254">
-      <div
-        class="mx-4 flex justify-between items-center text-xs pb-3 mt-2"
-        style="border-bottom: 1px solid #4d5254"
-      >
-        <div>Free shipping</div>
-        <span style="color: #4d5254">|</span>
-        <img src="src/assets/lock.svg" class="h-3 w-3" alt="lock icon" />
-        <div>Secure 256-bit SSL encryption</div>
-      </div>
-      <div class="mx-4 flex justify-center mt-3">
-        <img src="src/assets/cards/visa.svg" alt="visa" />
-        <img src="src/assets/cards/shopPay.svg" alt="shopPay" />
-        <img src="src/assets/cards/paypal.svg" alt="paypal" />
-        <img src="src/assets/cards/mastercard.svg" alt="mastercard" />
-        <img src="src/assets/cards/gpay.svg" alt="gpay" />
-        <img src="src/assets/cards/applepay.svg" alt="applepay" />
-        <img src="src/assets/cards/amex.svg" alt="amex" />
-      </div>
-    </div>
-    <div class="text-center text-red-600 uppercase mt-3 text-xs">
-      No thanks, I don’t want this.
-    </div>
-  </section>
-  <section>
-    <div class="grid grid-cols-5 mx-5 mt-6 pb-8">
-      <div>
-        <img src="src/assets/guarantee.png" alt="guarantee" width="48" />
-      </div>
-      <div class="col-span-4 text-xs">
-        <span
-          >If you are not completely thrilled with your Clarifion - We have a
-          <span class="font-bold">30 day satisfaction guarantee.</span> Please
-          refer to our return policy at the bottom of the page for more details.
-        </span>
-        <div>Happy Shopping!</div>
-      </div>
-    </div>
-  </section>
-  <footer class="bg-slate-900 text-white h-28">
-    <div class="mx-4 flex justify-between items-center text-xs pt-5">
-      <div>Copyright (c) 2023</div>
-      <span>|</span>
-      <div>Clarifionsupport@clarifion.com</div>
-    </div>
-    <div class="flex justify-center text-center items-center pt-4 text-xs">
+    <section class="flex justify-between h-28 items-center p-5 lg:px-32">
       <img
-        src="src/assets/lock-footer.svg"
-        class="h-3 w-3 mr-4"
-        alt="lock icon"
+        class="h-5"
+        src="https://s3-alpha-sig.figma.com/img/5bdd/2e8e/ca6d33ae7930758c0396996013437236?Expires=1701648000&Signature=G08qgqatek2q0-vSxbgsZskZUcZWVM2Vqc2S9yKknjpKTsY~qhQvmwPbby~Cm7MO-DbU-KY~-47xNzxbDezY-GFF3N5h07CV8d7C4DKne5NEI3G8HBhc-k6U4VYGX-Opi-Jb9j8fUU~En60~GpVkLNh0oenX2lxwCNO~R-NUq9ZYC8AblDdxM29fKyp4z-9hNlB0wjOiZ0L3h5qjUW03yqkVM98ImOrus0YSfPs0CNrSoGmCNiKgBvUgukFEGw~EOBdJuV8bwcykNqpsfI0AJ4iMgbFKM52vgG~pUc9mHT1f2yhPGVQbKQYRofB-W0acq4~~r7xQ5Dbd-pALKueOMQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+        alt="clarifion image"
       />
-      <div>Secure 256-bit SSL encryption.</div>
+      <div class="flex justify-between">
+        <img src="src/assets/mcafee.svg" alt="mcafee" class="mr-4" />
+        <img src="src/assets/norton.svg" alt="norton" />
+      </div>
+    </section>
+    <section class="text-center h-16 px-5">
+      <div class="text-3xl capitalize">Wait ! your order in progress.</div>
+    </section>
+    <div class="text-gray-700 pt-6 text-center">
+      Lorem ipsum dolor sit amet consectetur
     </div>
-  </footer>
+    <section
+      class="flex justify-between h-9 items-center px-5 my-6 capitalize text-xs text-center lg:px-32"
+    >
+      <div>
+        <i
+          class="fa-solid fa-check bg-lime-600 text-white rounded-full"
+          style="padding: 5px"
+        ></i>
+        <div>Cart Review</div>
+      </div>
+      <div>
+        <i
+          class="fa-solid fa-check bg-lime-600 text-white rounded-full"
+          style="padding: 5px"
+        ></i>
+        <div>checkout</div>
+      </div>
+      <div>
+        <div class="flex justify-center">
+          <div
+            class="bg-sky-500 rounded-full"
+            style="height: 21px; width: 20px; padding: 5px"
+          ></div>
+          <span class="absolute text-white">3</span>
+        </div>
+        <div class="font-bold">Special offer</div>
+      </div>
+      <div>
+        <div class="flex justify-center">
+          <img src="src/assets/ellipse-outln.svg" alt="step 4 icon" />
+          <span class="absolute text-sky-600">4</span>
+        </div>
+        <div>Confirmation</div>
+      </div>
+    </section>
+    <section class="text-center text-2xl capitalize px-5">
+      <span class="text-sky-500"> ONE TIME ONLY </span>
+      special price for 6 extra Clarifion for only
+      <div><span class="text-sky-500">$14 each </span>($84.00 total!)</div>
+    </section>
+    <section>
+      <div class="pt-6">
+        <img class="px-5 w-full" src="src/assets/clarifion.png" alt="" />
+      </div>
+    </section>
+    <section class="py-6">
+      <div class="grid grid-cols-4 px-5">
+        <div class="bg-sky-600 h-20 w-20 rounded-lg">
+          <img src="src/assets/clarifion-source-sm.png" alt="" />
+        </div>
+        <div class="col-span-3">
+          <div class="flex justify-around py-2">
+            <div class="text-sm">
+              Clarifion Air Ionizer
+              <div class="flex py-2">
+                <div><img src="src/assets/star.svg" alt="star rating" /></div>
+                <div><img src="src/assets/star.svg" alt="star rating" /></div>
+                <div><img src="src/assets/star.svg" alt="star rating" /></div>
+                <div><img src="src/assets/star.svg" alt="star rating" /></div>
+                <div><img src="src/assets/star.svg" alt="star rating" /></div>
+              </div>
+              <div class="flex">
+                <img src="src/assets/dot.svg" alt="dot" class="mr-4" /> 12 left
+                in Stock
+              </div>
+            </div>
+            <div>
+              <span class="text-xs mr-2 line-through text-gray-500">$180</span>
+              <span class="text-sm text-sky-500">$84</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="text-center text-xs px-5 my-6">
+      Simply plug a Clarifion into any standard outlet and replace bulky,
+      expensive air purifiers with a simple.
+    </section>
+    <section class="text-sm mx-5">
+      <div>
+        <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
+        <span>Negative Ion Technology may help with allergens</span>
+      </div>
+      <div>
+        <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
+        <span>Designed for air rejuvenation</span>
+      </div>
+      <div>
+        <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
+        <span>Perfect for every room in all types of places.</span>
+      </div>
+    </section>
+    <section>
+      <div class="h-16 bg-sky-100 rounded-lg mx-5 my-6">
+        <div class="grid grid-cols-5 items-center">
+          <div class="flex justify-center">
+            <img src="src/assets/percent.svg" alt="percent" />
+          </div>
+          <div class="col-span-4 my-2">
+            <span>
+              Save <span class="text-sky-500"> 53%</span> and get
+              <span class="text-sky-500">6 extra Clarifision</span> for only
+              <span class="text-sky-500"> $14 Each. </span>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="mx-5">
+        <button
+          class="bg-green-600 w-full h-14 rounded-3xl text-white font-bold"
+        >
+          Yes - Claim my discount <i class="fa-solid fa-arrow-right"></i>
+        </button>
+      </div>
+    </section>
+    <section>
+      <div class="h-20 mx-5 rounded-lg mt-3" style="border: 1px solid #4d5254">
+        <div
+          class="mx-4 flex justify-between items-center text-xs pb-3 mt-2"
+          style="border-bottom: 1px solid #4d5254"
+        >
+          <div>Free shipping</div>
+          <span style="color: #4d5254">|</span>
+          <img src="src/assets/lock.svg" class="h-3 w-3" alt="lock icon" />
+          <div>Secure 256-bit SSL encryption</div>
+        </div>
+        <div class="mx-4 flex justify-center mt-3">
+          <img src="src/assets/cards/visa.svg" alt="visa" />
+          <img src="src/assets/cards/shopPay.svg" alt="shopPay" />
+          <img src="src/assets/cards/paypal.svg" alt="paypal" />
+          <img src="src/assets/cards/mastercard.svg" alt="mastercard" />
+          <img src="src/assets/cards/gpay.svg" alt="gpay" />
+          <img src="src/assets/cards/applepay.svg" alt="applepay" />
+          <img src="src/assets/cards/amex.svg" alt="amex" />
+        </div>
+      </div>
+      <div class="text-center text-red-600 uppercase mt-3 text-xs">
+        No thanks, I don’t want this.
+      </div>
+    </section>
+    <section>
+      <div class="grid grid-cols-5 mx-5 mt-6 pb-8">
+        <div>
+          <img src="src/assets/guarantee.png" alt="guarantee" width="48" />
+        </div>
+        <div class="col-span-4 text-xs">
+          <span
+            >If you are not completely thrilled with your Clarifion - We have a
+            <span class="font-bold">30 day satisfaction guarantee.</span> Please
+            refer to our return policy at the bottom of the page for more
+            details.
+          </span>
+          <div>Happy Shopping!</div>
+        </div>
+      </div>
+    </section>
+    <footer class="bg-slate-900 text-white h-28">
+      <div class="mx-4 flex justify-between items-center text-xs pt-5">
+        <div>Copyright (c) 2023</div>
+        <span>|</span>
+        <div>Clarifionsupport@clarifion.com</div>
+      </div>
+      <div class="flex justify-center text-center items-center pt-4 text-xs">
+        <img
+          src="src/assets/lock-footer.svg"
+          class="h-3 w-3 mr-4"
+          alt="lock icon"
+        />
+        <div>Secure 256-bit SSL encryption.</div>
+      </div>
+    </footer>
+  </body>
 </html>
