--- a/index.html
+++ b/index.html
@@ -93,14 +93,20 @@
         <div>Confirmation</div>
       </div>
     </section>
-    <section class="text-center text-2xl capitalize px-5">
-      <span class="text-sky-500"> ONE TIME ONLY </span>
-      special price for 6 extra Clarifion for only
-      <div><span class="text-sky-500">$14 each </span>($84.00 total!)</div>
-    </section>
     <section>
-      <div class="pt-6">
-        <img class="px-5 w-full" src="src/assets/clarifion.png" alt="" />
+      <div class="grid grid-cols-2">
+        <div
+          class="text-center text-2xl capitalize px-5 col-span-2 lg:col-span-1 lg:pt-6"
+        >
+          <span class="text-sky-500"> ONE TIME ONLY </span>
+          special price for 6 extra Clarifion for only
+          <div><span class="text-sky-500">$14 each </span>($84.00 total!)</div>
+        </div>
+        <div class="col-span-2 lg:col-span-1 lg:-order-1">
+          <div class="pt-6">
+            <img class="px-5 w-full" src="src/assets/clarifion.png" alt="" />
+          </div>
+        </div>
       </div>
     </section>
     <section class="py-6">
