--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header class="bg-slate-700 uppercase">
+    <header class="bg-slate-800 uppercase">
       <div
         class="h-11 flex justify-between text-white items-center py-2 px-5 lg:mx-32"
       >
@@ -55,7 +55,7 @@
     <section class="text-center h-16 px-5">
       <div class="text-3xl capitalize">Wait ! your order in progress.</div>
     </section>
-    <div class="text-gray-700 pt-6 text-center">
+    <div class="text-gray-700 pt-6 text-center text-base">
       Lorem ipsum dolor sit amet consectetur
     </div>
     <section
@@ -93,135 +93,203 @@
         <div>Confirmation</div>
       </div>
     </section>
-    <section>
+    <section class="lg:mx-32">
       <div class="grid grid-cols-2">
         <div
-          class="text-center text-2xl capitalize px-5 col-span-2 lg:col-span-1 lg:pt-6"
+          class="text-center lg:text-start text-2xl capitalize px-5 col-span-2 lg:col-span-1 lg:pt-6"
         >
           <span class="text-sky-500"> ONE TIME ONLY </span>
           special price for 6 extra Clarifion for only
           <div><span class="text-sky-500">$14 each </span>($84.00 total!)</div>
         </div>
-        <div class="col-span-2 lg:col-span-1 lg:-order-1">
+        <div class="col-span-2 lg:col-span-1 lg:-order-1 lg:row-span-6">
           <div class="pt-6">
-            <img class="px-5 w-full" src="src/assets/clarifion.png" alt="" />
+            <img
+              class="px-5 w-full h-full"
+              src="src/assets/clarifion.png"
+              alt=""
+            />
           </div>
+        </div>
+        <div class="col-span-2 lg:col-span-1 py-6">
+          <div class="grid grid-cols-4 px-5">
+            <div class="bg-sky-600 h-20 w-20 lg:h-28 lg:w-28 rounded-lg">
+              <img src="src/assets/clarifion-source-sm.png" alt="" />
+            </div>
+            <div class="col-span-3">
+              <div class="flex justify-around py-2">
+                <div class="text-sm">
+                  Clarifion Air Ionizer
+                  <div class="flex py-2">
+                    <div>
+                      <img src="src/assets/star.svg" alt="star rating" />
+                    </div>
+                    <div>
+                      <img src="src/assets/star.svg" alt="star rating" />
+                    </div>
+                    <div>
+                      <img src="src/assets/star.svg" alt="star rating" />
+                    </div>
+                    <div>
+                      <img src="src/assets/star.svg" alt="star rating" />
+                    </div>
+                    <div>
+                      <img src="src/assets/star.svg" alt="star rating" />
+                    </div>
+                  </div>
+                  <div class="flex">
+                    <img src="src/assets/dot.svg" alt="dot" class="mr-4" /> 12
+                    left in Stock
+                  </div>
+                </div>
+                <div>
+                  <span class="text-xs mr-2 line-through text-gray-500"
+                    >$180</span
+                  >
+                  <span class="text-sm text-sky-500">$84</span>
+                </div>
+              </div>
+              <div class="text-xs hidden lg:grid grid-cols-8 justify-end">
+                <div></div>
+                <div class="col-span-6">
+                  Simply plug a Clarifion into any standard outlet and replace
+                  bulky, expensive air purifiers with a simple.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="col-span-2 lg:col-span-1 text-center text-xs px-5 mb-6 lg:hidden"
+        >
+          Simply plug a Clarifion into any standard outlet and replace bulky,
+          expensive air purifiers with a simple.
+        </div>
+        <div class="col-span-2 lg:col-span-1 mx-5 text-sm">
+          <div class="">
+            <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
+            <span>Negative Ion Technology may help with allergens</span>
+          </div>
+          <div>
+            <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
+            <span>Designed for air rejuvenation</span>
+          </div>
+          <div>
+            <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
+            <span>Perfect for every room in all types of places.</span>
+          </div>
+        </div>
+        <div
+          class="h-16 bg-sky-100 rounded-lg mx-5 my-6 col-span-2 lg:col-span-1"
+        >
+          <div class="grid grid-cols-5 items-center">
+            <div class="flex justify-center">
+              <img src="src/assets/percent.svg" alt="percent" />
+            </div>
+            <div class="col-span-4 my-2">
+              <span>
+                Save <span class="text-sky-500"> 53%</span> and get
+                <span class="text-sky-500">6 extra Clarifision</span> for only
+                <span class="text-sky-500"> $14 Each. </span>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="mx-5 col-span-2 lg:col-span-1">
+          <button
+            class="bg-green-600 w-full h-14 rounded-3xl text-white font-bold"
+          >
+            Yes - Claim my discount <i class="fa-solid fa-arrow-right ml-3"></i>
+          </button>
         </div>
       </div>
     </section>
-    <section class="py-6">
-      <div class="grid grid-cols-4 px-5">
-        <div class="bg-sky-600 h-20 w-20 rounded-lg">
-          <img src="src/assets/clarifion-source-sm.png" alt="" />
-        </div>
-        <div class="col-span-3">
-          <div class="flex justify-around py-2">
-            <div class="text-sm">
-              Clarifion Air Ionizer
-              <div class="flex py-2">
-                <div><img src="src/assets/star.svg" alt="star rating" /></div>
-                <div><img src="src/assets/star.svg" alt="star rating" /></div>
-                <div><img src="src/assets/star.svg" alt="star rating" /></div>
-                <div><img src="src/assets/star.svg" alt="star rating" /></div>
-                <div><img src="src/assets/star.svg" alt="star rating" /></div>
-              </div>
-              <div class="flex">
-                <img src="src/assets/dot.svg" alt="dot" class="mr-4" /> 12 left
-                in Stock
-              </div>
+    <div class="grid grid-cols-2 lg:mx-32">
+      <div class="hidden lg:grid grid-cols-8 grid-rows-2 p-6 h-52">
+        <img src="src/assets/ken.png" alt="ken" class="row-span-2" />
+        <div class="col-span-4">
+          <div class="flex py-2">
+            <div>
+              <img src="src/assets/star.svg" alt="star rating" />
             </div>
             <div>
-              <span class="text-xs mr-2 line-through text-gray-500">$180</span>
-              <span class="text-sm text-sky-500">$84</span>
+              <img src="src/assets/star.svg" alt="star rating" />
+            </div>
+            <div>
+              <img src="src/assets/star.svg" alt="star rating" />
+            </div>
+            <div>
+              <img src="src/assets/star.svg" alt="star rating" />
+            </div>
+            <div>
+              <img src="src/assets/star.svg" alt="star rating" />
             </div>
           </div>
         </div>
+        <div class="col-span-4 flex items-center">
+          Ken T.
+          <img
+            src="src/assets/verified-green.svg"
+            alt="verified"
+            class="h-4 mx-2"
+          />
+          Verified Customer
+        </div>
+        <div class="col-span-8 mt-4">
+          “As soon as the Clarifions arrived I put one in my bedroom. This was
+          late in the afternoon. When I went to the bedroom in the evening it
+          smelled clean. When I went to bed I felt I could breathe better.
+          Wonderful.”
+        </div>
       </div>
-    </section>
-    <section class="text-center text-xs px-5 my-6">
-      Simply plug a Clarifion into any standard outlet and replace bulky,
-      expensive air purifiers with a simple.
-    </section>
-    <section class="text-sm mx-5">
-      <div>
-        <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
-        <span>Negative Ion Technology may help with allergens</span>
-      </div>
-      <div>
-        <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
-        <span>Designed for air rejuvenation</span>
-      </div>
-      <div>
-        <i class="fa-solid fa-check mr-3 text-sky-500 py-2"></i>
-        <span>Perfect for every room in all types of places.</span>
-      </div>
-    </section>
-    <section>
-      <div class="h-16 bg-sky-100 rounded-lg mx-5 my-6">
-        <div class="grid grid-cols-5 items-center">
-          <div class="flex justify-center">
-            <img src="src/assets/percent.svg" alt="percent" />
+      <div class="col-span-2 lg:col-span-1">
+        <section>
+          <div
+            class="h-20 mx-5 rounded-lg mt-3"
+            style="border: 1px solid #4d5254"
+          >
+            <div
+              class="mx-4 flex justify-between items-center text-xs pb-3 mt-2"
+              style="border-bottom: 1px solid #4d5254"
+            >
+              <div>Free shipping</div>
+              <span style="color: #4d5254">|</span>
+              <img src="src/assets/lock.svg" class="h-3 w-3" alt="lock icon" />
+              <div>Secure 256-bit SSL encryption</div>
+            </div>
+            <div class="mx-4 flex justify-center mt-3">
+              <img src="src/assets/cards/visa.svg" alt="visa" />
+              <img src="src/assets/cards/shopPay.svg" alt="shopPay" />
+              <img src="src/assets/cards/paypal.svg" alt="paypal" />
+              <img src="src/assets/cards/mastercard.svg" alt="mastercard" />
+              <img src="src/assets/cards/gpay.svg" alt="gpay" />
+              <img src="src/assets/cards/applepay.svg" alt="applepay" />
+              <img src="src/assets/cards/amex.svg" alt="amex" />
+            </div>
           </div>
-          <div class="col-span-4 my-2">
-            <span>
-              Save <span class="text-sky-500"> 53%</span> and get
-              <span class="text-sky-500">6 extra Clarifision</span> for only
-              <span class="text-sky-500"> $14 Each. </span>
-            </span>
+          <div class="text-center text-red-600 uppercase mt-3 text-xs">
+            No thanks, I don’t want this.
           </div>
-        </div>
+        </section>
+        <section>
+          <div class="grid grid-cols-5 mx-5 mt-6 pb-8">
+            <div>
+              <img src="src/assets/guarantee.png" alt="guarantee" width="48" />
+            </div>
+            <div class="col-span-4 text-xs">
+              <span
+                >If you are not completely thrilled with your Clarifion - We
+                have a
+                <span class="font-bold">30 day satisfaction guarantee.</span>
+                Please refer to our return policy at the bottom of the page for
+                more details.
+              </span>
+              <div>Happy Shopping!</div>
+            </div>
+          </div>
+        </section>
       </div>
-    </section>
-    <section>
-      <div class="mx-5">
-        <button
-          class="bg-green-600 w-full h-14 rounded-3xl text-white font-bold"
-        >
-          Yes - Claim my discount <i class="fa-solid fa-arrow-right"></i>
-        </button>
-      </div>
-    </section>
-    <section>
-      <div class="h-20 mx-5 rounded-lg mt-3" style="border: 1px solid #4d5254">
-        <div
-          class="mx-4 flex justify-between items-center text-xs pb-3 mt-2"
-          style="border-bottom: 1px solid #4d5254"
-        >
-          <div>Free shipping</div>
-          <span style="color: #4d5254">|</span>
-          <img src="src/assets/lock.svg" class="h-3 w-3" alt="lock icon" />
-          <div>Secure 256-bit SSL encryption</div>
-        </div>
-        <div class="mx-4 flex justify-center mt-3">
-          <img src="src/assets/cards/visa.svg" alt="visa" />
-          <img src="src/assets/cards/shopPay.svg" alt="shopPay" />
-          <img src="src/assets/cards/paypal.svg" alt="paypal" />
-          <img src="src/assets/cards/mastercard.svg" alt="mastercard" />
-          <img src="src/assets/cards/gpay.svg" alt="gpay" />
-          <img src="src/assets/cards/applepay.svg" alt="applepay" />
-          <img src="src/assets/cards/amex.svg" alt="amex" />
-        </div>
-      </div>
-      <div class="text-center text-red-600 uppercase mt-3 text-xs">
-        No thanks, I don’t want this.
-      </div>
-    </section>
-    <section>
-      <div class="grid grid-cols-5 mx-5 mt-6 pb-8">
-        <div>
-          <img src="src/assets/guarantee.png" alt="guarantee" width="48" />
-        </div>
-        <div class="col-span-4 text-xs">
-          <span
-            >If you are not completely thrilled with your Clarifion - We have a
-            <span class="font-bold">30 day satisfaction guarantee.</span> Please
-            refer to our return policy at the bottom of the page for more
-            details.
-          </span>
-          <div>Happy Shopping!</div>
-        </div>
-      </div>
-    </section>
+    </div>
     <footer class="bg-slate-900 text-white h-28">
       <div class="mx-4 flex justify-between items-center text-xs pt-5">
         <div>Copyright (c) 2023</div>
