--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </div>
         </div>
         <div
-          class="h-16 bg-sky-100 rounded-lg mx-5 my-6 col-span-2 lg:col-span-1"
+          class="h-16 bg-sky-100 rounded-lg mx-5 my-6 col-span-2 lg:col-span-1 flex"
         >
           <div class="grid grid-cols-5 items-center">
             <div class="flex justify-center">
@@ -294,10 +294,10 @@
         </section>
       </div>
     </div>
-    <footer class="bg-slate-900 text-white h-28">
+    <footer class="bg-slate-900 text-white h-28 lg:flex lg:justify-around">
       <div class="mx-4 flex justify-between items-center text-xs pt-5">
         <div>Copyright (c) 2023</div>
-        <span>|</span>
+        <span class="lg:mx-3">|</span>
         <div>Clarifionsupport@clarifion.com</div>
       </div>
       <div class="flex justify-center text-center items-center pt-4 text-xs">
